js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenFiles/lib2/JsModuleC.5.kt
@file:JsModule("../js-module-c")

external fun externalDemoFunction(): Int
